# rigid-geometric-algebra

./: .bazelignore  .bazeliskrc  .bazelrc  .clang-tidy  .clangd  .gitignore  .ruff.toml  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  gcov-wrapper.bash
.github/actions/ci-env-setup/: action.yml
.github/workflows/: check.yml  ci.bazelrc  repo-cache.yml
.zed/: settings.json
private/: local_python_fake_venv.bzl
python/: BUILD.bazel  Untitled.ipynb  example_plot.py  geom.py  notebook.py  plot.py  requirements.in  requirements.txt  requirements_lock.txt  viz_requirements_lock.txt
rigid-geometric-algebra/: BUILD.bazel
rigid_geometric_algebra/: BUILD.bazel  algebra.hpp  algebra_dimension.hpp  algebra_field.hpp  algebra_fwd.hpp  algebra_type.hpp  antiwedge.hpp  blade.hpp  blade_complement_type.hpp  blade_dimensions.hpp  blade_from_ordering.hpp  blade_fwd.hpp  blade_ordering.hpp  blade_sum.hpp  blade_type_from.hpp  canonical_dimension_order.hpp  canonical_type.hpp  common_algebra_type.hpp  complement.hpp  field.hpp  field_identity.hpp  geometric_fwd.hpp  get.hpp  get_or.hpp  glz_fwd.hpp  is_algebra.hpp  is_blade.hpp  is_canonical_blade_order.hpp  is_multivector.hpp  join.hpp  line.hpp  magma.hpp  meet.hpp  multivector.hpp  multivector_fwd.hpp  multivector_type_from_blade_list.hpp  one.hpp  plane.hpp  point.hpp  rigid_geometric_algebra.hpp  (+8 more)
rigid_geometric_algebra/detail/: are_dimensions_unique.hpp  array_subset.hpp  concat_ranges.hpp  contract.hpp  copy_ref_qual.hpp  counted_sort.hpp  decays_to.hpp  define_prioritized_overload.hpp  derive_multivector_overload.hpp  derive_subtraction.hpp  derive_vector_space_operations.hpp  derive_zero_constant_overload.hpp  disjoint_subset.hpp  even.hpp  geometric_interface.hpp  geometric_operator.hpp  has_type.hpp  has_value.hpp  indices_array.hpp  indices_of.hpp  invoke_prioritized_overload.hpp  is_complete.hpp  is_defined.hpp  is_specialization_of.hpp  linear_operator.hpp  multivector_promotable.hpp  multivector_sum.hpp  negate_if_odd.hpp  overload.hpp  priority.hpp  priority_list.hpp  rebind_args_into.hpp  size_checked_subrange.hpp  sorted_dimensions.hpp  structural_bitset.hpp  swaps_to_sorted_dimensions.hpp  tuple_cref.hpp  type_concat.hpp  type_filter.hpp  type_insert.hpp  (+4 more)
sym/: BUILD.bazel  constant.hpp  eval_type.hpp  expression.hpp  forward.hpp  function.hpp  operation.hpp  sym.hpp  sym_invocable.hpp  symbol.hpp
sym/test/: BUILD.bazel  constant_test.cpp  expression_test.cpp  symbol_test.cpp
test/: BUILD.bazel  antiwedge_test.cpp  blade_complement_type_test.cpp  blade_ordering_test.cpp  blade_sum_test.cpp  blade_test.cpp  blade_type_from_test.cpp  common_algebra_type_test.cpp  complement_test.cpp  dummy_test.cpp  field_identity_test.cpp  get_or_test.cpp  get_test.cpp  is_canonical_blade_order_test.cpp  join_test.cpp  line_test.cpp  meet_test.cpp  multivector_test.cpp  one_test.cpp  plane_test.cpp  point_test.cpp  points_example.cpp  scalar_antiscalar_type_test.cpp  serialization_test.cpp  skytest_ext.hpp  sorted_canonical_blades_test.cpp  symengine-example.cpp  symengine_example.cpp  symengine_multivector_test.cpp  to_multivector_test.cpp  tuple_type_test.cpp  unit_hypervolume_test.cpp  zero_constant_test.cpp
test/detail/: BUILD.bazel  are_dimensions_unique_test.cpp  contract_handler_failure_test.bash  contract_handler_test.cpp  contract_test.cpp  copy_ref_qual_test.cpp  counted_sort_test.cpp  decays_to_test.cpp  define_prioritized_overload_test.cpp  disjoint_subset_test.cpp  has_type_test.cpp  indices_of_test.cpp  is_defined_test.cpp  multivector_promotable_test.cpp  priority_list_test.cpp  rebind_args_into_test.cpp  size_checked_subrange_test.cpp  structural_bitset_test.cpp  swaps_to_sorted_dimensions_test.cpp  tuple_cref_test.cpp  type_concat_test.cpp  type_filter_test.cpp  type_insert_test.cpp  type_product_test.cpp
test/symengine/: compat.hpp  format.hpp
tools/: BUILD.bazel  cov_requirements_lock.txt  gcovr.py
tools/time_trace/: aspect.bzl
