package(default_visibility = ["//:__subpackages__"])

filegroup(
    name = "format-config",
    srcs = [".clang-format"],
)

filegroup(
    name = "tidy-config",
    srcs = [".clang-tidy"],
)

alias(
    name = "rigid-geometric-algebra",
    actual = "//rigid_geometric_algebra",
)

alias(
    name = "rigid_geometric_algebra",
    actual = "//rigid_geometric_algebra",
)
