workspace(name = "rigid_geometric_algebra")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

CXX_STANDARD = ["-std=c++23"]

COMMON_CXX_WARNINGS = [
    "-Werror",
    "-Wall",
    "-Wextra",
    "-Wpedantic",
    "-Wconversion",
    "-Wnon-virtual-dtor",
    "-Wold-style-cast",
    "-Wcast-align",
    "-Wunused",
    "-Woverloaded-virtual",
    "-Wmisleading-indentation",
    "-Wnull-dereference",
    "-Wdouble-promotion",
    "-Wformat=2",
    "-Wimplicit-fallthrough",
]

# toolchains_llvm also loads rules_cc but possibly an older version
http_archive(
    name = "rules_cc",
    sha256 = "2037875b9a4456dce4a79d112a8ae885bbc4aad968e6587dca6e64f3a0900cdf",
    strip_prefix = "rules_cc-0.0.9",
    urls = ["https://github.com/bazelbuild/rules_cc/releases/download/0.0.9/rules_cc-0.0.9.tar.gz"],
)

TOOLCHAINS_LLVM_COMMIT = "b1a6c86b42ee2373574d0e6862d9d9d5405c3146"

http_archive(
    name = "toolchains_llvm",
    integrity = "sha256-hdEfwQEvZaPD/gp6A9iDSIxxKOBYrn+ttFYjAHfFby8=",
    strip_prefix = "bazel-toolchain-{commit}".format(
        commit = TOOLCHAINS_LLVM_COMMIT,
    ),
    url = "https://github.com/oliverlee/bazel-toolchain/archive/{commit}.tar.gz".format(
        commit = TOOLCHAINS_LLVM_COMMIT,
    ),
)

load("@toolchains_llvm//toolchain:deps.bzl", "bazel_toolchain_dependencies")

bazel_toolchain_dependencies()

load("@toolchains_llvm//toolchain:rules.bzl", "llvm_toolchain")

# https://github.com/bazel-contrib/toolchains_llvm/blob/192cf04bbb11b29a8ca6756e269d27a840bfa14b/toolchain/internal/repo.bzl
llvm_toolchain(
    name = "llvm18_toolchain",
    cxx_flags = {
        "": [
            "-D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_EXTENSIVE",
            "-stdlib=libc++",
            "-Wshadow",
        ] + COMMON_CXX_WARNINGS + CXX_STANDARD,
    },
    # Link UBSan C++ runtime libraries if the `ubsan` feature is enabled
    # https://github.com/bazelbuild/bazel/issues/12797#issuecomment-980641064
    # use `link_libs` to prevent overriding default `link_flags`
    # https://github.com/grailbio/bazel-toolchain/blob/ceeedcc4464322e05fe5b8df3749cc02273ee083/toolchain/cc_toolchain_config.bzl#L148-L150
    link_libs = {
        "": ["-fsanitize-link-c++-runtime"],
    },
    llvm_version = "18.1.8",
)

# register llvm first, it has better error messages
load("@llvm18_toolchain//:toolchains.bzl", "llvm_register_toolchains")

llvm_register_toolchains()

BAZEL_BOOTLIN_COMMIT = "d15e4b4c3a984668d1d6bd5f3ca032efecae5cb1"

http_archive(
    name = "bazel_bootlin",
    integrity = "sha256-kBlWjcV2AXGblkqCNxg1/bs2c6YLrLHqLgSbwsAcCl8=",
    strip_prefix = "bazel_bootlin-{commit}".format(
        commit = BAZEL_BOOTLIN_COMMIT,
    ),
    url = "https://github.com/oliverlee/bazel_bootlin/archive/{commit}.tar.gz".format(
        commit = BAZEL_BOOTLIN_COMMIT,
    ),
)

load("@bazel_bootlin//:defs.bzl", "bootlin_toolchain")

bootlin_toolchain(
    name = "gcc12_toolchain",
    # x86-64-v3 should cover CPUs released after ~2015.
    # see https://www.phoronix.com/news/GCC-11-x86-64-Feature-Levels.
    architecture = "x86-64-v3",
    # see https://toolchains.bootlin.com/releases_x86-64-v3.html
    buildroot_version = "bleeding-edge-2023.08-1",
    extra_cxx_flags = [
        "-fdiagnostics-color=always",
        "-Wduplicated-cond",
        "-Wduplicated-branches",
        "-Wlogical-op",
        "-Wuseless-cast",
        "-Wshadow=compatible-local",
    ] + COMMON_CXX_WARNINGS + CXX_STANDARD,
    libc_impl = "glibc",
)

register_toolchains(
    "@gcc12_toolchain//:toolchain",
)

BAZEL_CLANG_FORMAT_COMMIT = "1fd2a042798ede8d6f5498ea92287bc1204260fa"

http_archive(
    name = "bazel_clang_format",
    integrity = "sha256-wcS8GuHvn57FgtMHGLVlBZB+pZ4ojkploCzlwU+ZDFc=",
    strip_prefix = "bazel_clang_format-{commit}".format(
        commit = BAZEL_CLANG_FORMAT_COMMIT,
    ),
    url = "https://github.com/oliverlee/bazel_clang_format/archive/{commit}.tar.gz".format(
        commit = BAZEL_CLANG_FORMAT_COMMIT,
    ),
)

RULES_CLANG_TIDY_COMMIT = "efa53bab83ee4a631f80d3581f51b51d5ca00143"

http_archive(
    name = "rules_clang_tidy",
    integrity = "sha256-tDxw/Y7S7/qBp/a+4pTEz3VUb2SPA0klz4/liNSCivo=",
    strip_prefix = "rules_clang_tidy-{commit}".format(
        commit = RULES_CLANG_TIDY_COMMIT,
    ),
    url = "https://github.com/oliverlee/rules_clang_tidy/archive/{commit}.tar.gz".format(
        commit = RULES_CLANG_TIDY_COMMIT,
    ),
)

load("@rules_clang_tidy//:dependencies.bzl", "rules_clang_tidy_dependencies")

rules_clang_tidy_dependencies()

http_archive(
    name = "buildifier_prebuilt",
    sha256 = "e46c16180bc49487bfd0f1ffa7345364718c57334fa0b5b67cb5f27eba10f309",
    strip_prefix = "buildifier-prebuilt-6.1.0",
    urls = [
        "https://github.com/keith/buildifier-prebuilt/archive/6.1.0.tar.gz",
    ],
)

load("@buildifier_prebuilt//:deps.bzl", "buildifier_prebuilt_deps")

buildifier_prebuilt_deps()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@buildifier_prebuilt//:defs.bzl", "buildifier_prebuilt_register_toolchains")

buildifier_prebuilt_register_toolchains()

http_archive(
    name = "rules_multirun",
    sha256 = "0e124567fa85287874eff33a791c3bbdcc5343329a56faa828ef624380d4607c",
    url = "https://github.com/keith/rules_multirun/releases/download/0.9.0/rules_multirun.0.9.0.tar.gz",
)

BAZEL_COMPILE_COMMANDS_EXTRACTOR_COMMIT = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93"

http_archive(
    name = "hedron_compile_commands",
    integrity = "sha256-BEsUixEeF87mHYw6ru1CBp9zJUYDgjQK/KSRn4JlCUw=",
    strip_prefix = "bazel-compile-commands-extractor-{commit}".format(
        commit = BAZEL_COMPILE_COMMANDS_EXTRACTOR_COMMIT,
    ),
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/{commit}.tar.gz".format(
        commit = BAZEL_COMPILE_COMMANDS_EXTRACTOR_COMMIT,
    ),
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

load("@hedron_compile_commands//:workspace_setup_transitive.bzl", "hedron_compile_commands_setup_transitive")

hedron_compile_commands_setup_transitive()

load("@hedron_compile_commands//:workspace_setup_transitive_transitive.bzl", "hedron_compile_commands_setup_transitive_transitive")

hedron_compile_commands_setup_transitive_transitive()

load("@hedron_compile_commands//:workspace_setup_transitive_transitive_transitive.bzl", "hedron_compile_commands_setup_transitive_transitive_transitive")

hedron_compile_commands_setup_transitive_transitive_transitive()

SKYTEST_COMMIT = "e65c73da419fa41f2e9fbdd858e2773296b487d0"

http_archive(
    name = "skytest",
    integrity = "sha256-58vFmSmGnEgZ0fF469x+uQXWZEcV4dD7lPFt6S6R7vo=",
    strip_prefix = "skytest-{commit}".format(
        commit = SKYTEST_COMMIT,
    ),
    url = "https://github.com/oliverlee/skytest/archive/{commit}.tar.gz".format(
        commit = SKYTEST_COMMIT,
    ),
)

# last commit before transition to bzlmod
RULES_BOOST_COMMIT = "5d04542e52164931841d06d5a6b3fd2f43c436d0"

http_archive(
    name = "com_github_nelhage_rules_boost",
    integrity = "sha256-bBVULQ07b0fNTSoWMqMFSgUCtRAuRxtEUzVDEstHRAc=",
    strip_prefix = "rules_boost-{commit}".format(
        commit = RULES_BOOST_COMMIT,
    ),
    url = "https://github.com/nelhage/rules_boost/archive/{commit}.tar.gz".format(
        commit = RULES_BOOST_COMMIT,
    ),
)

load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")

boost_deps()

http_archive(
    name = "symengine",
    build_file = "//third_party:symengine.BUILD.bazel",
    integrity = "sha256-G1w7C8ap8YdjX5NYVknyShjpx/IWfOvNiF7eqvIR2VY=",
    strip_prefix = "symengine-0.12.0",
    urls = [
        "https://github.com/symengine/symengine/archive/refs/tags/v0.12.0.tar.gz",
    ],
)

GLAZE_COMMIT = "8bed9f1add49e3b9595bb71156a4b54ab31374bb"

http_archive(
    name = "glaze",
    build_file = "//third_party:glaze.BUILD.bazel",
    integrity = "sha256-JWUpOtef3OqPGbzzLU3Kp4b5pEnX7frXEVS0aJbC2Yo=",
    strip_prefix = "glaze-{commit}".format(
        commit = GLAZE_COMMIT,
    ),
    urls = [
        "https://github.com/stephenberry/glaze/archive/{commit}.tar.gz".format(
            commit = GLAZE_COMMIT,
        ),
    ],
)

http_archive(
    name = "rules_python",
    sha256 = "be04b635c7be4604be1ef20542e9870af3c49778ce841ee2d92fcb42f9d9516a",
    strip_prefix = "rules_python-0.35.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.35.0/rules_python-0.35.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python3",
    python_version = "3.12",
)

load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pypi",
    python_interpreter_target = "@python3_host//:python",
    requirements_lock = "//python:requirements_lock.txt",
)

load("@pypi//:requirements.bzl", "install_deps")

install_deps()
