load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@pypi_viz//:requirements.bzl", viz_requirements = "all_requirements")

compile_pip_requirements(
    name = "viz_requirements",
    src = "viz_requirements.in",
    requirements_txt = "viz_requirements_lock.txt",
)

py_binary(
    name = "plot",
    srcs = ["plot.py"],
    deps = viz_requirements,
)
