load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@pypi//:requirements.bzl", "all_requirements")

pip_compile(
    name = "generate_requirements",
    requirements_in = ":requirements.in",
    requirements_txt = ":requirements.txt",
)

py_library(
    name = "geom",
    srcs = ["geom.py"],
    imports = ["rigid_geometric_algebra.python"],
    deps = all_requirements,
)

py_binary(
    name = "plot",
    srcs = ["plot.py"],
    deps = [":geom"] + all_requirements,
)

py_binary(
    name = "example_plot",
    srcs = ["example_plot.py"],
    deps = [":geom"] + all_requirements,
)
