load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "rigid_geometric_algebra",
    srcs = [
        "algebra.hpp",
        "algebra_dimension.hpp",
        "algebra_field.hpp",
        "algebra_fwd.hpp",
        "blade.hpp",
        "blade_ordering.hpp",
        "common_algebra_type.hpp",
        "detail/derive_subtraction.hpp",
        "detail/derive_vector_space_operations.hpp",
        "detail/has_type.hpp",
        "detail/is_specialization_of.hpp",
        "detail/sorted_dimensions.hpp",
        "detail/swaps_to_sorted_dimensions.hpp",
        "detail/unique_dimensions.hpp",
        "get.hpp",
        "get_or.hpp",
        "is_algebra.hpp",
        "is_blade.hpp",
        "is_canonical_blade_order.hpp",
        "is_multivector.hpp",
        "multivector.hpp",
        "wedge.hpp",
        "zero_constant.hpp",
    ],
    hdrs = ["rigid_geometric_algebra.hpp"],
    visibility = ["//:__subpackages__"],
)
