load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "rigid_geometric_algebra",
    srcs = [
        "algebra.hpp",
        "algebra_dimension.hpp",
        "algebra_field.hpp",
        "algebra_fwd.hpp",
        "algebra_type.hpp",
        "antiwedge.hpp",
        "blade.hpp",
        "blade_complement_type.hpp",
        "blade_ordering.hpp",
        "blade_sum.hpp",
        "blade_type_from.hpp",
        "canonical_type.hpp",
        "common_algebra_type.hpp",
        "complement.hpp",
        "detail/are_dimensions_unique.hpp",
        "detail/array_subset.hpp",
        "detail/contract.hpp",
        "detail/copy_ref_qual.hpp",
        "detail/counted_sort.hpp",
        "detail/decays_to.hpp",
        "detail/define_prioritized_overload.hpp",
        "detail/derive_multivector_overload.hpp",
        "detail/derive_subtraction.hpp",
        "detail/derive_vector_space_operations.hpp",
        "detail/derive_zero_constant_overload.hpp",
        "detail/disjoint_subset.hpp",
        "detail/even.hpp",
        "detail/has_type.hpp",
        "detail/has_value.hpp",
        "detail/indices_array.hpp",
        "detail/indices_of.hpp",
        "detail/invoke_prioritized_overload.hpp",
        "detail/is_complete.hpp",
        "detail/is_defined.hpp",
        "detail/is_specialization_of.hpp",
        "detail/linear_operator.hpp",
        "detail/multivector_promotable.hpp",
        "detail/overload.hpp",
        "detail/priority.hpp",
        "detail/priority_list.hpp",
        "detail/rebind_args_into.hpp",
        "detail/size_checked_subrange.hpp",
        "detail/structural_bitset.hpp",
        "detail/type_concat.hpp",
        "detail/type_filter.hpp",
        "detail/type_insert.hpp",
        "detail/type_list.hpp",
        "detail/type_product.hpp",
        "field.hpp",
        "field_identity.hpp",
        "get.hpp",
        "get_or.hpp",
        "glz_fwd.hpp",
        "is_algebra.hpp",
        "is_blade.hpp",
        "is_canonical_blade_order.hpp",
        "is_multivector.hpp",
        "magma.hpp",
        "multivector.hpp",
        "multivector_type_from_blade_list.hpp",
        "one.hpp",
        "point.hpp",
        "scalar_type.hpp",
        "sorted_canonical_blades.hpp",
        "to_multivector.hpp",
        "unit_hypervolume.hpp",
        "wedge.hpp",
        "zero_constant.hpp",
    ],
    hdrs = ["rigid_geometric_algebra.hpp"],
    visibility = ["//:__subpackages__"],
)
