load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "sym",
    srcs = [
        "constant.hpp",
        "eval_type.hpp",
        "expression.hpp",
        "forward.hpp",
        "function.hpp",
        "operation.hpp",
        "sym_invocable.hpp",
        "symbol.hpp",
    ],
    hdrs = ["sym.hpp"],
    visibility = ["//:__subpackages__"],
)
