load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//:__subpackages__"])

cc_test(
    name = "blade_test",
    size = "small",
    srcs = ["blade_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "zero_constant_test",
    size = "small",
    srcs = ["zero_constant_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)
