load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "symengine",
    hdrs = ["symengine/format.hpp"],
    includes = ["."],
    deps = ["@symengine"],
)

cc_binary(
    name = "symengine-example",
    srcs = ["symengine-example.cpp"],
    deps = [":symengine"],
)

cc_test(
    name = "common_algebra_type_test",
    size = "small",
    srcs = ["common_algebra_type_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "blade_type_from_test",
    size = "small",
    srcs = ["blade_type_from_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "blade_test",
    size = "small",
    srcs = ["blade_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "blade_ordering_test",
    size = "small",
    srcs = ["blade_ordering_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "get_test",
    size = "small",
    srcs = ["get_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "get_or_test",
    size = "small",
    srcs = ["get_or_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "is_canonical_blade_order_test",
    size = "small",
    srcs = ["is_canonical_blade_order_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "multivector_test",
    size = "small",
    srcs = ["multivector_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "symengine_multivector_test",
    size = "small",
    srcs = ["symengine_multivector_test.cpp"],
    deps = [
        ":symengine",
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "sorted_canonical_blades_test",
    size = "small",
    srcs = ["sorted_canonical_blades_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "zero_constant_test",
    size = "small",
    srcs = ["zero_constant_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)
