load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//:__subpackages__"])

cc_test(
    name = "has_type_test",
    size = "small",
    srcs = ["has_type_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "is_defined_test",
    size = "small",
    srcs = ["is_defined_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)
