load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//:__subpackages__"])

cc_test(
    name = "are_dimensions_unique_test",
    size = "small",
    srcs = ["are_dimensions_unique_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "define_prioritized_overload_test",
    size = "small",
    srcs = ["define_prioritized_overload_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "disjoint_subset_test",
    size = "small",
    srcs = ["disjoint_subset_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "has_type_test",
    size = "small",
    srcs = ["has_type_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "is_defined_test",
    size = "small",
    srcs = ["is_defined_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)

cc_test(
    name = "tuple_cref_test",
    size = "small",
    srcs = ["tuple_cref_test.cpp"],
    deps = [
        "//rigid_geometric_algebra",
        "@skytest",
    ],
)
